@@ -1,4 +1,4 @@
-$Id: History,v 1.1 1999-01-07 16:05:40 gunter Exp $
+$Id: History,v 1.2 1999-04-16 10:48:47 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,8 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+16th April 1999 H.Kurashige
+- modify ExN01PhysicsList::SetCuts
 
 May 07, 98 M.Asai
 - First commitment of all classes.
